fix paragraph not centered in prog-form

--- a/client/src/css/Main.css
+++ b/client/src/css/Main.css
@@ -39,7 +39,7 @@ program-form > * {
   line-height: 2rem;
 }
 
-program-form p {
+.body-text {
   text-align: justify;
 }
 
